# django_calendar

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CoverageMain.yml  PrivatePackage.yml  TestPullRequest.yml  TestPush.yml  TestPushes.yml  python-publish-private.yml  python-publish-test.yml  python-publish.yml
django_calendar/: admin.py  apps.py
django_calendar/migrations/: 0001_initial.py  0002_status_color.py  0003_delete_status.py  0004_recreate_status.py  0005_recurrence.py
django_calendar/models/: __init__.py  managers.py  mixins.py
tests/: settings.py  test_calendar.py
